samples/_failures_safe/1761223784_17ecc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54cbd355.c: In function ‘main’:
./samples/SAFE/__tmp_54cbd355.c:149:13: error: expected declaration or statement at end of input
  149 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_54cbd355.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54cbd355.c:149:13: error: expected declaration or statement at end of input
